--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="c-editor were you can test ur coding ,html,css,js editor">
     <meta name="keywords" content="live editor,html editor,css editor,js editor">
+    <meta name="theme-color" content="#000000"/>
     <title>c-editor</title>
     <link rel="shortcut icon" href="img/logo192.png" type="image/x-icon">
   <link rel="manifest" href="manifest.json">
